# pg_chess

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_gate.out  pg_chess.control  start.ps1
.github/workflows/: ci.yml  publish.yml
crates/gambit-analysis/: Cargo.toml
crates/gambit-analysis/benches/: search.rs
crates/gambit-analysis/benches/baselines/search_depth_4_startpos/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-analysis/benches/baselines/search_depth_6_tactical/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-analysis/src/: book.rs  classify.rs  eval.rs  evaluator.rs  game.rs  lib.rs  limits.rs  order.rs  phase.rs  report.rs  search.rs  see.rs  tt.rs
crates/gambit-analysis/tests/: classify.rs  epd.rs  puzzles.rs
crates/gambit-db/: CHANGELOG.md  Cargo.toml  README.md
crates/gambit-db-wasm/: Cargo.toml
crates/gambit-db-wasm/src/: lib.rs
crates/gambit-db/benches/: movegen.rs
crates/gambit-db/benches/baselines/apply_move_startpos/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/from_fen_startpos/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/game_replay_20_plies/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/generate_legal_moves_startpos/base/: estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/generate_legal_moves_startpos/new/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/legal_moves_startpos/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/perft_startpos_d3/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/benches/baselines/zobrist_hash_startpos/: benchmark.json  estimates.json  sample.json  tukey.json
crates/gambit-db/src/: board.rs  game.rs  lib.rs  movement.rs  perft.rs  square.rs  tablebase.rs  types.rs  zobrist.rs
crates/gambit-db/src/board/: bitboard.rs
crates/gambit-db/src/fen/: format.rs  mod.rs  parse.rs  validate.rs
crates/gambit-db/src/movegen/: attack_tables.rs  attacks.rs  castling.rs  error.rs  legality.rs  mod.rs  movelist.rs  pseudo.rs  state.rs
crates/gambit-db/src/pgn/: error.rs  explode.rs  mod.rs  parse.rs  write.rs
crates/gambit-db/src/san/: error.rs  format.rs  mod.rs  parse.rs
crates/gambit-db/tests/: perft.rs  pgn_fixture.rs  pgn_ingest.rs  square_index.rs
crates/gambit-ingest/: Cargo.toml
crates/gambit-ingest-worker/: Cargo.toml
crates/gambit-ingest-worker/src/: db.rs  grpc.rs  jobs.rs  lib.rs  load_job.rs  main.rs
crates/gambit-ingest/src/: cli.rs  grpc.rs  headers.rs  lib.rs  main.rs  profile.rs  progress.rs
crates/gambit-ingest/src/analyze/: copy.rs  gambit_eval.rs  mod.rs  uci.rs
crates/gambit-ingest/src/book/: export.rs  mod.rs
crates/gambit-ingest/src/db/: copy.rs  filesets.rs  mod.rs  staging_lock.rs
crates/gambit-ingest/src/lichess/: catalog.rs  download.rs  mod.rs
crates/gambit-ingest/src/pipeline/: mod.rs
crates/gambit-ingest/src/stream/: mod.rs
crates/gambit-proto/: Cargo.toml  build.rs
crates/gambit-proto/proto/gambit/v1/: common.proto  ingest.proto  studio.proto
crates/gambit-proto/src/: lib.rs
crates/gambit-py/: Cargo.toml  pyproject.toml
crates/gambit-py/src/: lib.rs
crates/gambit-studio-server/: Cargo.toml
crates/gambit-studio-server/src/: db.rs  grpc.rs  jobs.rs  lib.rs  main.rs  pool.rs  progress.rs  routes.rs  types.rs
crates/gambit-studio-server/tests/: api_integration.rs  read_perf.rs
crates/gambit-studio-ui/: Cargo.toml  Trunk.toml  index.html
crates/gambit-studio-ui/src/: api.rs  api_types.rs  app.rs  brand.rs  format.rs  grpc_web.rs  job_poll.rs  lib.rs  replay.rs
crates/gambit-studio-ui/src/board/: chess_board.rs  fen.rs  mod.rs  piece.rs  uci.rs
crates/gambit-studio-ui/src/pages/: bench.rs  dashboard.rs  explorer.rs  games.rs  mod.rs  util.rs
crates/gambit-uci/: Cargo.toml
crates/gambit-uci/src/: client.rs  format.rs  lib.rs  parse.rs  pool.rs  server.rs
crates/pg_chess/: Cargo.toml  pg_chess.control
crates/pg_chess/src/: analysis.rs  api.rs  lib.rs
docs/: analysis.md  architecture.md  data-types.md  ingest.md  roadmap.md  sql-api.md  studio.md
schema/: migrate.ps1  migrate.sh
schema/migrations/: 001_core.sql  002_defer_types.sql  003_fileset_tracking.sql  004_query_perf.sql  005_analysis.sql  006_read_perf.sql  007_mv_refresh_fix.sql
scripts/: bench.ps1  bench_gate.ps1  bench_gate.sh  check.ps1  check.sh  gambit_pg_env.ps1  ingest_bench.ps1  ingest_bench.sh  ingest_gate.ps1  perft.ps1  perft.sh  pg_dump.ps1  pg_restore.ps1  pgrx_test.ps1  pgrx_test.sh  split_app_ui.py  start_overnight_ingest.ps1  start_pg.ps1  start_studio.ps1  stop_gambit.ps1
src/: api.rs  board.rs  fen.rs  game.rs  lib.rs  movegen.rs  movement.rs  types.rs  zobrist.rs
tests/e2e/: package.json  playwright.config.ts
tests/e2e/studio/: dashboard.spec.ts
tests/fixtures/lichess/: list.txt
tests/fixtures/pgn/: fen_setup.pgn  multi_game.pgn  sample.pgn
tests/pg_regress/: schedule
tests/pg_regress/expected/: indexes.out  ingest_schema.out  volatility.out
tests/pg_regress/sql/: indexes.sql  ingest_schema.sql  setup.sql  volatility.sql
