[workspace]
members = [
    "crates/gambit-db",
    "crates/gambit-analysis",
    "crates/gambit-ingest",
    "crates/gambit-py",
    "crates/gambit-uci",
    "crates/gambit-db-wasm",
    "crates/gambit-studio-server",
    "crates/gambit-studio-ui",
    "crates/pg_chess",
]
resolver = "2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
