[package]
name = "gambit-db-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for gambit-db board and move operations"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gambit-db = { path = "../gambit-db" }
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
