[package]
name = "gambit-ingest"
version = "0.1.0"
edition = "2021"
description = "High-throughput PGN bulk ingest for gambit PostgreSQL schema"
license = "MIT"

[[bin]]
name = "gambit-ingest"
path = "src/main.rs"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "allow"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
gambit-db = { path = "../gambit-db" }
indicatif = "0.17"
rayon = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
