[package]
name = "gambit-ingest"
version = "0.1.0"
edition = "2021"
description = "High-throughput PGN bulk ingest for gambit PostgreSQL schema"
license = "MIT"

[lib]
name = "gambit_ingest"
path = "src/lib.rs"

[[bin]]
name = "gambit-ingest"
path = "src/main.rs"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "allow"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
gambit-db = { path = "../gambit-db" }
gambit-analysis = { path = "../gambit-analysis" }
hex = "0.4"
indicatif = "0.17"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.13"

[dev-dependencies]
