[package]
name = "gambit-proto"
version = "0.1.0"
edition = "2021"
description = "Protobuf definitions and generated gRPC stubs for Gambit"
license = "MIT"

[features]
default = []
server = ["dep:tonic"]
client = ["dep:tonic", "tonic/transport"]

[dependencies]
prost = "0.13"
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"], optional = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
