[package]
name = "gambit-studio-server"
version = "0.1.0"
edition = "2021"
description = "REST API for Gambit Studio chess database browser"
license = "MIT"

[[bin]]
name = "gambit-studio-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
deadpool-postgres = "0.14"
gambit-db = { path = "../gambit-db" }
gambit-ingest = { path = "../gambit-ingest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
