[package]
name = "gambit-studio-server"
version = "0.1.0"
edition = "2021"
description = "gRPC API for Gambit Studio chess database browser"
license = "MIT"

[[bin]]
name = "gambit-studio-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
deadpool-postgres = "0.14"
gambit-db = { path = "../gambit-db" }
gambit-ingest = { path = "../gambit-ingest" }
gambit-proto = { path = "../gambit-proto", features = ["server", "client"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-postgres = "0.7"
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-web = "0.12"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
gambit-ingest = { path = "../gambit-ingest" }
gambit-proto = { path = "../gambit-proto", features = ["client", "server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = { version = "0.12", features = ["transport"] }
