[package]
name = "gambit-studio-ui"
version = "0.1.0"
edition = "2021"
description = "WASM frontend for Gambit Studio chess database browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
gambit-db-wasm = { path = "../gambit-db-wasm" }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Element", "KeyboardEvent", "MouseEvent"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
