[package]
name = "gambit-studio-ui"
version = "0.1.0"
edition = "2021"
description = "WASM frontend for Gambit Studio chess database browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
gambit-db-wasm = { path = "../gambit-db-wasm" }
gambit-proto = { path = "../gambit-proto" }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
prost = "0.13"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
