[package]
name = "pg_chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg19 = ["pgrx/pg19", "pgrx-tests/pg19"]
pg_test = []
pg_bench = ["dep:pgrx-bench"]

[dependencies]
gambit-analysis = { path = "../gambit-analysis" }
gambit-db = { path = "../gambit-db" }
pgrx = "=0.19.1"
serde = { version = "1", features = ["derive"] }

[dependencies.pgrx-bench]
version = "=0.19.1"
optional = true

[dev-dependencies]
pgrx-tests = "=0.19.1"
